syntax = "proto3";

package search;

import "google/protobuf/empty.proto";

option java_package = "mobile.auth.grpc";
option java_multiple_files = true;

message PingResponse {
  string message = 1;
}

message SignUpRequest{
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string message = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

// Service
service Authorization {
  rpc Ping(google.protobuf.Empty) returns (PingResponse) {}

  rpc SignUp(SignUpRequest) returns (AuthResponse) {}

  rpc SignIn(SignInRequest) returns (AuthResponse) {}
}
